<resources>
  <string name="app_name">Choppit</string>
  <string name="settings">Settings</string>
  <string name="title_home">Choppit Home</string>
  <string name="home_input_hint_top">Paste a recipe link here</string>
  <string name="home_input_hint_bottom">Or leave empty to start from scratch.</string>
  <string name="new_recipe">New Recipe</string>
  <string name="my_cookbook">My Cookbook</string>
  <string name="logo">Choppit Logo</string>
  <string name="help">Help</string>
  <string name="title_editing">Recipe Editing</string>
  <string name="cookbook">Cookbook</string>
  <string name="recipe">Recipe</string>
  <string name="ingredient_input_hint">Ingredient text</string>
  <string name="step_input_hint">Instruction text</string>
  <string name="save_button">Save Recipe</string>
  <string name="extract_button">Extract Recipe</string>
  <string name="title_selection">Detail Selection</string>
  <string name="step_hint">Instructions</string>
  <string name="step_tag">Step </string>
  <string name="edit_button">Edited indicator</string>
  <string name="favorite_button">Favorite indicator</string>
  <string name="sp_key_recipe_font_style">Font Style</string>
  <string name="recipe_font_style">Font Style</string>
  <string name="recipe_editing">Recipe Editing</string>
  <string name="detail_selection">Detail Selection</string>
  <string name="default_recipe_title">Recipe Title</string>
  <string name="okay">Okay</string>
  <string name="cupcake_dolor_ipsum">Cupcake ipsum dolor sit amet pastry jujubes. Chupa chups sugar plum cupcake toffee. Donut tart marshmallow caramels halvah pie biscuit sesame snaps. Chocolate toffee biscuit oat cake cupcake pastry powder carrot cake tiramisu. Sesame snaps lollipop gummi bears danish bear claw macaroon pudding cotton candy cheesecake. Cheesecake cake dessert marshmallow icing. Wafer cookie jelly-o. Macaroon cotton candy croissant tart dessert. Lemon drops jelly danish powder soufflé candy canes pie. Jujubes carrot cake liquorice gummies pastry. Jujubes apple pie oat cake tart cake cupcake. Marzipan sugar plum sweet ice cream apple pie.</string>
  <string name="status_information">Status Information</string>
  <string name="warming_up">Warming up …</string>
  <string name="connecting">… Connecting to site …</string>
  <string name="separating">… Separating text …</string>
  <string name="processing">… processing the data</string>
  <string name="finishing">… finishing</string>
  <string name="octothorpe">#</string>
  <string name="unit_hint">Unit</string>
  <string name="ingredient_hint">Ingredient</string>
  <string name="save_failed">Failed to save recipe!</string>
  <string name="recipe_fail">Failed to load recipe!</string>
  <string name="edit_title">Change Recipe Title</string>
  <string name="recipe_screen">Recipe Screen</string>
  <string name="delete_ingredient">Delete Ingredient</string>
  <string name="delete_button">Delete button</string>
  <string name="ingredients">Ingredients</string>
  <string name="instructions">Instructions</string>
  <string name="add_ingredient">Add Ingredient</string>
  <string name="add_step">Add Step</string>
  <string name="loading">Loading</string>
  <string name="delete_recipe">Do you want to delete the recipe?  This action cannot be undone.</string>
  <string name="recipe_info">This screen displays a single recipe.  Soon it will also have options to edit, delete, or go into Cooking Mode.</string>
  <string name="save_recipe">Do you want to save a new recipe, or update the existing one?  A new recipe has to have a different title.</string>
  <string name="sp_key_recipe_font_size">Font Size</string>
  <string name="finished">… finished!</string>
  <string name="string_selector">String Selector</string>
  <string name="selection_message">Choppit extracted these text elements.\nTap below to copy text.</string>
  <string name="no_string_selected">Please select text for an ingredient and a step.</string>
  <string name="select_prompt">Is this text an ingredient or instruction in your recipe?</string>
  <string name="font_size">Font Size</string>
  <string name="size_description">Choose a font size for recipe display while cooking</string>
  <string name="default_recipe_filler">Recipe Body</string>
</resources>
