<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <PreferenceCategory
    app:key="text_category"
    app:title="Recipe Text Options">
    <ListPreference
      android:key="@string/sp_key_recipe_font_style"
      android:title="@string/recipe_font_style"
      android:entries="@array/font_names_array"
      android:entryValues="@array/font_values_array"
      android:defaultValue="Droid"
      android:summary="Choose a typeface for recipe display while cooking"
      android:icon="@drawable/ic_font"
      />
    <SeekBarPreference
      android:key="@string/sp_key_recipe_font_size"
      android:title="@string/sp_key_recipe_font_size"
      android:icon="@drawable/ic_size"
      app:min="10"
      android:max="24"
      android:summary="Choose a font size for recipe display while cooking"
      android:defaultValue="14"
      app:showSeekBarValue="true"
      />
  </PreferenceCategory>

</PreferenceScreen>
