<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.SettingsActivity">

  <fragment
    android:id="@+id/settings_fragment"
    android:name="edu.cnm.deepdive.choppit.controller.SettingsActivity$SettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="FragmentTagUsage"/>

  <TextView
    android:id="@+id/settings_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/standard_margin"
    android:text="@string/default_recipe_title"
    style="@style/RecipeItem.Title"
    app:layout_constraintTop_toBottomOf="@id/settings_fragment"/>

  <TextView
    android:id="@+id/settings_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_margin"
    android:text="@string/cupcake_dolor_ipsum"
    style="@style/RecipeItem.Text"
    app:layout_constraintTop_toBottomOf="@id/settings_title"
    app:layout_constraintBottom_toTopOf="@id/button"/>

  <Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_margin"
    android:text="@string/okay"
    app:layout_constraintTop_toBottomOf="@id/settings_body"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>