<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/settings_layout"
  android:theme="@style/Droid"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".controller.SettingsActivity"
  >

  <TextView
    android:id="@+id/settings_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/wide_space"
    android:text="@string/default_recipe_title"
    style="@style/RecipeItem.Title"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/settings_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_margin"
    android:text="@string/cupcake_dolor_ipsum"
    style="@style/RecipeItem.Text"
    app:layout_constraintTop_toBottomOf="@id/settings_title"
    />
  <Spinner
    android:id="@+id/settings_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:entries="@array/font_names_array"
    android:layout_margin="@dimen/wide_space"
    android:spinnerMode="dropdown"
    app:layout_constraintTop_toBottomOf="@id/settings_body"
    app:layout_constraintBottom_toTopOf="@id/okay_button"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />


  <Button
    android:id="@+id/okay_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_margin"
    android:text="@string/okay"
    app:layout_constraintTop_toBottomOf="@id/settings_spinner"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>