<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="ingredient"
      type="edu.cnm.deepdive.choppit.model.entity.Ingredient"/>
    <variable
      name="uiController"
      type="edu.cnm.deepdive.choppit.controller.ui.editing.EditingFragment"/>
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/medium_space"
    android:paddingEnd="@dimen/medium_space"
    android:orientation="horizontal"
    android:showDividers="none">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/measurement_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/narrow_space"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintBaseline_toBaselineOf="@id/name_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintHorizontal_chainStyle="packed">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editing_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{ingredient.quantity}"
        android:hint="@string/octothorpe"
        android:inputType="number"
        android:minEms="3"
        android:maxLength="6"
        android:maxLines="1">
      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/unit_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/narrow_space"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      app:hintEnabled="true"
      app:hintAnimationEnabled="false"
      app:layout_constraintStart_toEndOf="@id/measurement_layout"
      app:layout_constraintBaseline_toBaselineOf="@id/name_layout"
      app:layout_constraintHorizontal_chainStyle="packed">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editing_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unit_hint"
        android:text="@{ingredient.unit.toString()}"
        android:inputType="text"
        android:minEms="3"
        android:maxLength="10"
        android:maxLines="1">
      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/name_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/narrow_space"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/unit_layout"
      app:layout_constraintEnd_toStartOf="@id/delete"
      app:layout_constraintHorizontal_chainStyle="packed">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editing_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_hint"
        android:text="@{ingredient.name}"
        android:inputType="text"
        android:minEms="8"
        android:maxLines="1">
      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
      android:id="@+id/delete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:background="@color/transparent"
      android:contentDescription="@string/delete_button"
      android:src="@android:drawable/ic_delete"/>


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
